--- a/From_Doccure/templates/user/index.html
+++ b/From_Doccure/templates/user/index.html
@@ -27,7 +27,7 @@
                 <!-- Left side content -->
                 <div class="content_left">
                     <div class="left_header">
-                        <a href="#">Logo</a>
+                        <a href="{% url 'index' %}">Logo</a>
                     </div>
                     <div class="left_body">
                         <div class="left_slider_main">
@@ -49,7 +49,7 @@
                 <!-- Right side content -->
                 <div class="content_right">
                     <div class="right_header">
-                        <a href="#">Logo</a>
+                        <a href="{% url 'index' %}">Logo</a>
                     </div>
                     <div class="right_body">
                         <div class="right_body_inner">
@@ -64,7 +64,7 @@
                     <!-- Footer -->
                     <div class="right_footer">
                         <div class="footer_logo">
-                            <a href="#">Logo</a>
+                            <a href="{% url 'index' %}">Logo</a>
                         </div>
                         <div class="footer_content">
                             <a href="#">Terms of use</a>
