--- a/From_Doccure/templates/user/signup.html
+++ b/From_Doccure/templates/user/signup.html
@@ -21,13 +21,14 @@
         <div class="container">
             <div class="signup_main">
                <div class="logo">
-                <img src="" alt="Logo">
+                <img src="{% static 'assets/img/logo.png' %}" alt="Logo">
                 <h2 class="signup_logo">Logo</h2>
                </div> 
                <div class="signup_form">
                 <h2 class="signup_title">Create your account</h2>
                 <p class="signup_subtitle">Note that phone verification may be required for signup. Your number will only be used to verify your identity for security purposes.</p>
-                <form action="#">
+                <form method="POST" action="{% url 'signup_store' %}">
+                    {% csrf_token %}
                     <label for="name">Full Name</label>
                     <input type="text" name="name" id="name" placeholder="Enter Your name">
                     <label for="email">Email</label>
@@ -39,6 +40,7 @@
                     <label for="con_pass">Confirm Password</label>
                     <input type="password" name="con_pass" id="con_pass" placeholder="Enter Confirm Password">
                     <button type="submit" class="signup_btn">Continue</button>
+                    
                 </form>
                 <p class="under_from">Already have an account? <a href="{% url 'login' %}">Log in</a></p>
                </div>
