--- a/From_Doccure/templates/common_code/base_code.html
+++ b/From_Doccure/templates/common_code/base_code.html
@@ -20,9 +20,12 @@
 		
 		<!-- Feathericon CSS -->
         <link rel="stylesheet" href="{% static 'assets/css/feathericon.min.css' %}">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css">
 		
 		<!-- Main CSS -->
         <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
+
+		
 		
 		<!--[if lt IE 9]>
 			<script src="assets/js/html5shiv.min.js"></script>
@@ -40,10 +43,10 @@
 				<!-- Logo -->
                 <div class="header-left">
                     <a href="index.html" class="logo">
-						<img src="{% static 'assets/img/logo.png' %}" alt="Logo">
+						<img src="{% static 'assets/img/logo1.png' %}" alt="Logo">
 					</a>
 					<a href="index.html" class="logo logo-small">
-						<img src="{% static 'assets/img/logo-small.png' %}" alt="Logo" width="30" height="30">
+						<img src="{% static 'assets/img/logo1.png' %}" alt="Logo" width="30" height="30">
 					</a>
                 </div>
 				<!-- /Logo -->
@@ -52,12 +55,12 @@
 					<i class="fe fe-text-align-left"></i>
 				</a>
 				
-				<div class="top-nav-search">
+				<!-- <div class="top-nav-search">
 					<form>
 						<input type="text" class="form-control" placeholder="Search here">
 						<button class="btn" type="submit"><i class="fa fa-search"></i></button>
 					</form>
-				</div>
+				</div> -->
 				
 				<!-- Mobile Menu Toggle -->
 				<a class="mobile_btn" id="mobile_btn">
@@ -215,6 +218,7 @@
 				
 				<!-- Slimscroll JS -->
 				<script src="{% static 'assets/plugins/slimscroll/jquery.slimscroll.min.js' %}"></script>
+				<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
 				
 				<!-- Custom JS -->
 				<script  src="{% static 'assets/js/script.js' %}"></script>
