--- a/From_Doccure/templates/user/index.html
+++ b/From_Doccure/templates/user/index.html
@@ -27,21 +27,21 @@
                 <!-- Left side content -->
                 <div class="content_left">
                     <div class="left_header">
-                        <a href="#">Logo</a>
+                        <a href="#"><img src="{% static 'assets/img/logo1.png' %}" alt="Logo" style="width: 300px;  margin-top: -50px;"></a>
                     </div>
                     <div class="left_body">
                         <div class="left_slider_main">
                             <div class="left_body_inner current">
-                                <h2 class="slider_title">Write a text</h2>
-                                <p class="slider_content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia obcaecati rem odit ratione eaque ad?</p>
+                                <h2 class="slider_title">Search your Doctor</h2>
+                                <p class="slider_content">Empower your health journey with personalized care - Search your Doctor, your trusted partner in well-being.</p>
                             </div>
                             <div class="left_body_inner">
-                                <h2 class="slider_title">Help me pick</h2>
-                                <p class="slider_content">, sit amet consectetur adipisicing elit. Quia obcaecati rem odit ratione eaque ad?</p>
+                                <h2 class="slider_title">Let's check our department recommendation system</h2>
+                                <p class="slider_content">Navigating healthcare excellence – Discover specialized care tailored to your needs in our hospital departments.</p>
                             </div>
                             <div class="left_body_inner">
-                                <h2 class="slider_title">Draft an email</h2>
-                                <p class="slider_content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia obcaecati rem odit ratione eaque ad?</p>
+                                <h2 class="slider_title">Let's Search the nearest hospital and save you valuable money</h2>
+                                <p class="slider_content">Find the closest hospital effortlessly and save on healthcare costs - Let's search for the nearest hospital and protect your wallet and well-being.</p>
                             </div>
                         </div>
                     </div>
@@ -63,9 +63,9 @@
 
                     <!-- Footer -->
                     <div class="right_footer">
-                        <div class="footer_logo">
-                            <a href="#">Logo</a>
-                        </div>
+                        <!-- <div class="footer_logo">
+                            <a href="#"><img src="{% static 'assets/img/logo1.png' %}" alt="Logo" style="width: 100px;  margin-top: -50px;"></a>
+                        </div> -->
                         <div class="footer_content">
                             <a href="#">Terms of use</a>
                             <a href="#">Privacy policy</a>
