--- a/From_Doccure/templates/user/signup.html
+++ b/From_Doccure/templates/user/signup.html
@@ -21,12 +21,11 @@
         <div class="container">
             <div class="signup_main">
                <div class="logo">
-                <img src="" alt="Logo">
-                <h2 class="signup_logo">Logo</h2>
+                <img src="{% static 'assets/img/logo1.png' %}">
                </div> 
                <div class="signup_form">
                 <h2 class="signup_title">Create your account</h2>
-                <p class="signup_subtitle">Note that phone verification may be required for signup. Your number will only be used to verify your identity for security purposes.</p>
+                <p class="signup_subtitle">Note that email and phone verification may be required for signup. Your email and number will only be used to verify your identity for security purposes.</p>
                 <form action="#">
                     <label for="name">Full Name</label>
                     <input type="text" name="name" id="name" placeholder="Enter Your name">
