--- a/From_Doccure/templates/form/Prediction/prediction.html
+++ b/From_Doccure/templates/form/Prediction/prediction.html
@@ -13,8 +13,7 @@
 					<!-- /Page Header -->
 					
 					<div class="row">
-						<div class="col-lg-12">
-							<div class="card">
+						<div class="col-lg-12 ">
 								<div class="card-header">
 									<h4 class="card-title">Prediction Name Inputs</h4>
 								</div>
@@ -32,7 +31,7 @@
                                         {% csrf_token %}
                                         <div class="form-group form_group1">
                                             <label for="exampleSelectGender">Select Prediction1</label>			
-                                              <select class="form-control select_box select_box1" id="exampleSelectGender" name="prediction1">
+                                              <select class="form-control select_box select_box1 select2" id="exampleSelectGender" name="prediction1" data-live-search="true">
                                                 <option>Select Symptom1</option>
                                                 {% for data_prediction in symptom_data1 %}
                                                 <option value="{{ data_prediction.id }}">{{ data_prediction }}</option>
