--- a/From_Doccure/templates/common_code/base_code.html
+++ b/From_Doccure/templates/common_code/base_code.html
@@ -143,6 +143,7 @@
 					
 					<!-- User Menu -->
 					<li class="nav-item dropdown has-arrow">
+						{% if request.user.is_authenticated %}
 						<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
 							<span class="user-img"><img class="rounded-circle" src="{% static 'assets/img/profiles/avatar-01.jpg' %}" width="31" alt="Ryan Taylor"></span>
 						</a>
@@ -156,10 +157,13 @@
 									<p class="text-muted mb-0">Administrator</p>
 								</div>
 							</div>
-							<a class="dropdown-item" href="profile.html">My Profile</a>
-							<a class="dropdown-item" href="settings.html">Settings</a>
-							<a class="dropdown-item" href="login.html">Logout</a>
+							{{request.user.username|capfirst}}
+							<a class="dropdown-item" href="{% url 'profile' %}">My Profile</a>
+							<a class="dropdown-item" href="{% url 'settings' %}">Settings</a>
+							<a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+
 						</div>
+						{% endif %}
 					</li>
 					<!-- /User Menu -->
 					
@@ -177,20 +181,35 @@
 							<li class="menu-title"> 
 								<span>Main</span>
 							</li>
-							<li class="{{active}}"> 
+							<li class=""> 
 								<a href="{% url 'home' %}"><i class="fe fe-home"></i> <span>Dashboard</span></a>
 							</li>
-							<li class="{{active}}"> 
+							<li class=""> 
 								<a href="{% url 'department' %}"><i class="fe fe-layout"></i> <span>Department</span></a>
 							</li>
-							<li class="{{active}}"> 
+							<li class=""> 
 								<a href="{% url 'di_panel' %}"><i class="fe fe-users"></i> <span>Disease</span></a>
 							</li>	
-							<li class="{{active}}"> 
+							<li class=""> 
 								<a href="{% url 'sym_panel' %}"><i class="fe fe-users"></i> <span>Symptom</span></a>
 							</li>	
-							<li class="{{active}}"> 
+							<li class=""> 
 								<a href="{% url 'prediction_panel' %}"><i class="fe fe-users"></i> <span>Prediction</span></a>
+							</li>
+							<li class="menu-title"> 
+								<span>Pages</span>
+							</li>
+							<li> 
+								<a href="{% url 'profile' %}"><i class="fe fe-user-plus"></i> <span>Profile</span></a>
+							</li>
+							<li class="submenu">
+								<a href="#"><i class="fe fe-document"></i> <span> Authentication </span> <span class="menu-arrow"></span></a>
+								<ul style="display: none;">
+									<li><a href="{% url 'login_l' %}"> Login </a></li>
+									<li><a href="{% url 'register' %}"> Register </a></li>
+									<li><a href="{% url 'forgot_password' %}"> Forgot Password </a></li>
+									<li><a href="{% url 'lock_screen' %}"> Lock Screen </a></li>
+								</ul>
 							</li>
 						</ul>
 					</div>
